# bc-copy-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
frontend/: bundle-app.js  package-lock.json  package.json  webpack.config.js
frontend/src/: index.html  main.js
frontend/src/env/: env.js  production.js
src/: api.rs  data.rs  file.rs  lib.rs  main.rs  ws.rs
src/api/: api.rs  client.rs  views.rs
src/ws/: ws_message.rs
templates/: index.html  index.html.tera
test_utils/: Cargo.toml
test_utils/src/: lib.rs
tests/: api.rs  websocket.rs
