[package]
name = "copy_service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "copy_service"
path = "src/main.rs"

[lib]
name = "cs"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
tungstenite = "0.20.0"
askama = "0.12.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
sha256 = "1.3.0"
base64 = "0.21.2"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[dev-dependencies]
lazy_static = "1.4.0"

